# realtime-audio-agents-playground

./: .env.example  .env.local.example  .gitignore  CONTRIBUTING.md  QUICKFIX.md  QUICK_START.md  README.md  TOOL_EXPOSURE_SUMMARY.md  agent2.py  example_tool_usage.py  main.py  main_voice.py  openai-agent-integrated.py  openai-agent.py  pyproject.toml  repository_history_by_copilot.md  requirements.txt  run_agent.py  test_tools.py
client/: __init__.py  audio_client.py
docs/: AGENT_SYSTEM_INSTRUCTIONS.md  FIX_ASYNC_CONTEXT_MANAGER.md  GOOGLE_CALENDAR_SETUP.md  QUICKSTART.md  SPOTIFY_SETUP.md  STATUS_SUMMARY.md  TROUBLESHOOTING_MCP_TIMEOUT.md
examples/: README.md  advanced_examples.py  test_calendar.py  test_connection.py  test_spotify.py
google-calendar-mcp-server/: get-refresh-token.js  package.json
mcp-server/: package.json  server.js
prompts/: DHA-ONE.md  comedian.txt
scripts/: README.md  check_env.py  diagnose_mcp.py  package.json  test_mcp_direct.py  verify_setup.py
server/: __init__.py  audio_server.py
spotify-mcp-server/: README.md  get-refresh-token.js  package.json  server.js
src/: realtime_voice_client.py
src/agent_host/: __init__.py  calendar_agent.py  spotify_agent.py
